Added camera icon

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ footer > ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.3rem 0.5rem;
+    padding: 0.3rem 0.5rem 0.2rem 0.5rem;
 }
 
 .search-container:hover {
@@ -126,6 +126,7 @@ footer > ul {
     outline: none;
     color: #bdc1c6;
     font-size: 10px;
+    margin-left: 0.5rem;
 }
 
 button {
@@ -204,6 +205,15 @@ form {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+}
+
+.mic {
+    margin-right: 0.6rem;
+}
+
+.mic,
+.camera {
+    cursor: pointer;
 }
 
 @media (max-width: 584px) {
